# CryptoNodeTracker

./: .replit  README.md  ai_insights.py  app.py  blockchain_utils.py  pinecone_db.py  predictive_analytics.py  pyproject.toml  token_data.py  vector_store.py
attached_assets/: Pasted-Step-1-Prerequisites-Coinbase-Cloud-account-Sign-up-and-get-your-EVM-node-endpoint-for-Ethereum--1747684277823.txt
