[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "numpy>=2.2.6",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
    "web3>=7.11.1",
]
